Fixed some layout bugs.

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -4,26 +4,34 @@
     background-image: -ms-linear-gradient( 90deg, rgb(255,255,255) 0%, rgb(243,243,243) 79%, rgb(231,231,231) 100%);
     min-height: 400px;
     width: 100%;
-    display: flex;
-    justify-content: center;
     align-items: flex-end;
     flex-direction: row;
+}
+
+.banner{
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-end;
     flex-wrap: wrap;
-  }
+    margin: 51px 0 0 0;
+}
 
 .banner__screen-img {
     display: block;
     height: 358px;
-    padding: 0 50px 0 0;
 }
 
-.banner-info-container {
+.banner__screen-img + .banner__info-container {
+    margin: 0 0 0 103px;
+}
+
+.banner__info-container {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: flex-end;
     align-items: flex-start;
-    padding: 0 10px 77px 50px;
+    padding: 0 0 77px 0;
     max-width: 470px;
 }
 
