--- a/styles/main.css
+++ b/styles/main.css
@@ -86,7 +86,3 @@ body {
     font-weight: 300;
     color: white;
 }
-
-.btn--inactive {
-    
-}
