--- a/styles/panel.css
+++ b/styles/panel.css
@@ -1,3 +1,7 @@
+.staff + .panel{
+    margin-left: 22px;
+}
+
 .panel {
     display: flex;
     flex-direction: column;
@@ -6,8 +10,6 @@
 
     width: 340px;
     min-height: 430px;
-
-    margin: 0 10px 0 10px;
 }
 
 .tab__btns-container {
